[package]
name = "cypher-parser"
version = "0.0.1"
authors = ["Kevin Oberlies <favilo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmask = "0.5.0"
boolinator = "2.4.0"
errno = "0.2.6"
libc = "0.2.77"
libcypher-parser-sys = "0.6.1-1"
memalloc = "0.1.0"
mopa = "0.2.2"
num = "0.3.0"
num-derive = { version = "0.3.2", features = ["full-syntax"] }
num-traits = "0.2.12"
paste = "1.0.1"
strum = "0.19.2"
strum_macros = "0.19.2"
thiserror = "1.0.20"

[dev-dependencies]
env_logger = "0.7.1"
